--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="str_oke">Ok</string>
     <string name="str_thong_bao">Thông báo</string>
     <string name="tiepTuc">Tiếp tục</string>
+    <string name="str_choi_ngay">Chơi ngay</string>
 </resources>
